fix(demo): mobile horizontal scrollbar

--- a/demo/src/routes/app.css
+++ b/demo/src/routes/app.css
@@ -130,6 +130,7 @@ blockquote {
 	> p {
 		margin-bottom: 0;
 	}
+	word-break: break-all;
 }
 
 .shiki {
